# simplifier

./: .gitignore  Makefile  README.md  app.py  explore-data.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  run.sh  turbo.json
apps/api/: main.py  package.json  simpli.py
apps/client/: next.config.ts  package.json
apps/client/src/app/: layout.tsx  page.tsx
apps/client/src/app/api/completion/albert/: route.ts
apps/client/src/app/api/completion/chatgpt/: route.ts
apps/client/src/app/components/: Chat.tsx  footer.tsx  header.tsx
apps/fastapi/: package.json
apps/front/: next.config.ts  package.json  tailwind.config.ts
apps/front/src/: auth.ts
apps/front/src/app/: layout.tsx  page.tsx
apps/front/src/app/actions/: auth.ts
apps/front/src/app/api/auth/: route.ts
apps/front/src/app/api/auth/callback/: route.ts
apps/front/src/app/api/auth/logout/: route.ts
apps/front/src/app/api/completion/albert/: route.ts
apps/front/src/app/api/completion/chatgpt/: route.ts
apps/front/src/app/chat/: page.tsx
apps/front/src/app/chat/components/: Chat.tsx
apps/front/src/app/components/: AppFooter.tsx  AppHeader.tsx  Chat.tsx  Footer.tsx  Header.tsx  Login.tsx
apps/front/src/utils/: env.ts
data/: ri_annotated_texts_filtered_anonymized.csv  ri_annotated_texts_final.csv
fastapi/: simpli.py
notebooks/: Categorie_Classifier.ipynb  Catégorie_Classifier.ipynb  Catégorie-Classifier.ipynb  MultiLabel_Text_Classification.ipynb  Prompt_Optimization.ipynb  Typology-Classification.ipynd  explore-data.ipynb  finetune-mutlilabel.ipynb  genai_for_public_good.ipynb  new_finetune.ipynb  test_ckpt.ipynb
notebooks/data_cleaning/: 1. Filter.ipynb  2. Process PII.ipynb  3. Categorization.ipynb
