[project]
name = "genai4good"
version = "0.1.0"
description = "Top level package for GenAI for Public Good."
readme = "README.md"
authors = [
    { name = "Luis Arias", email = "luis@refugies.info" },
    { name = "Jérémie Gisserot", email = "jeremie@refugies.info" },
    { name = "Alexandre Bigot", email = "alexandre-hadrien.bigot@interieur.gouv.fr" },
    { name = "Nouran Khallaf", email = "n.khallaf@leeds.ac.uk" },
]
requires-python = ">=3.12"
dependencies = [
    "pip>=25.0",
    "pandas>=2.2.3",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = []
