[project]
name = "genai4good"
version = "0.1.0"
description = "Top level package for GenAI for Public Good."
readme = "README.md"
authors = [
    { name = "Luis Arias", email = "luis@refugies.info" },
    { name = "Jérémie Gisserot", email = "jeremie@refugies.info" },
    { name = "Alexandre Bigot", email = "alexandre-hadrien.bigot@interieur.gouv.fr" },
    { name = "Nouran Khallaf", email = "n.khallaf@leeds.ac.uk" },
]
requires-python = ">=3.12"
dependencies = [
    "pip>=25.0",
    "pandas>=2.2.3",
    "faker>=35.2.0",
    "presidio-analyzer>=2.2.357",
    "presidio-anonymizer>=2.2.357",
    "spacy>=3.8.4",
    "plotly>=6.0.0",
    "nltk>=3.9.1",
    "nbformat>=5.10.4",
    "fastapi[standard]>=0.115.8",
    "langchain-community>=0.3.16",
    "langchain>=0.3.17",
    "langchain-openai>=0.3.3",
    #"scikit-learn>=1.6.1",
    #"transformers[torch]>=4.48.2",
    #"streamlit>=1.42.0",
]



[tool.black]
line-length = 150

[tool.ruff]
line-length = 150
